Add time measuring to ngram baseline

--- a/ngrams_baseline.ipynb
+++ b/ngrams_baseline.ipynb
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,12 +214,6 @@
     "        for i in range(len(seq)-N):\n",
     "            # to avoid considering empty tokens\n",
     "            # and non-identifiers\n",
-    "#             print(id_to_word[seq[i+1]].isidentifier())\n",
-    "#             print(id_to_word[seq[i+0]])\n",
-    "#             print(id_to_word[seq[i+1]])\n",
-    "#             print(id_to_word[seq[i+2]])\n",
-    "#             break\n",
-    "#         break\n",
     "            if seq[i+1] != 0 and seq[i+2] != 0 and id_to_word[seq[i+2]].isidentifier():\n",
     "                if (seq[i], seq[i+1]) in ngrams_dict \\\n",
     "                        and seq[i+2] == ngrams_dict[(seq[i], seq[i+1])]:\n",
@@ -231,29 +225,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 95687/95687 [00:13<00:00, 7204.57it/s]\n"
+      "100%|██████████| 95687/95687 [00:12<00:00, 7505.28it/s]"
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "0.1551705967949177"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.1552\n",
+      "Time needed for one prediction is just accessing the dict element, so it's around ~12 sec / ~96000 = 0.0001250 (info from tqdm counter)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
     }
    ],
    "source": [
-    "calc_quality(new_ngrams_dict)"
+    "accuracy = calc_quality(new_ngrams_dict)\n",
+    "print('''Accuracy: {:.4f}\n",
+    "Time needed for one prediction is just accessing the dict element, so it\\'s around ~12 sec / ~96000 = {:.7f} (info from tqdm counter)'''\\\n",
+    ".format(accuracy, 12. / 96000))\n"
    ]
   },
   {
