--- a/classic_complete_ranking.ipynb
+++ b/classic_complete_ranking.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -154,22 +154,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<Completion: filter>,\n",
-       " <Completion: float>,\n",
-       " <Completion: foo>,\n",
-       " <Completion: for>,\n",
-       " <Completion: format>,\n",
-       " <Completion: from>,\n",
-       " <Completion: frozenset>]"
+       "([<Completion: filter>,\n",
+       "  <Completion: float>,\n",
+       "  <Completion: foo>,\n",
+       "  <Completion: for>,\n",
+       "  <Completion: format>,\n",
+       "  <Completion: from>,\n",
+       "  <Completion: frozenset>],\n",
+       " ['__class__',\n",
+       "  '__delattr__',\n",
+       "  '__dict__',\n",
+       "  '__dir__',\n",
+       "  '__doc__',\n",
+       "  '__eq__',\n",
+       "  '__format__',\n",
+       "  '__ge__',\n",
+       "  '__getattribute__',\n",
+       "  '__gt__',\n",
+       "  '__hash__',\n",
+       "  '__init__',\n",
+       "  '__init_subclass__',\n",
+       "  '__le__',\n",
+       "  '__lt__',\n",
+       "  '__module__',\n",
+       "  '__ne__',\n",
+       "  '__new__',\n",
+       "  '__reduce__',\n",
+       "  '__reduce_ex__',\n",
+       "  '__repr__',\n",
+       "  '__setattr__',\n",
+       "  '__sizeof__',\n",
+       "  '__str__',\n",
+       "  '__subclasshook__',\n",
+       "  '__weakref__',\n",
+       "  '_analysis',\n",
+       "  '_code',\n",
+       "  '_code_lines',\n",
+       "  '_evaluator',\n",
+       "  '_get_module',\n",
+       "  '_grammar',\n",
+       "  '_module_node',\n",
+       "  '_orig_path',\n",
+       "  '_path',\n",
+       "  '_pos',\n",
+       "  '_project',\n",
+       "  'call_signatures',\n",
+       "  'completions',\n",
+       "  'goto_assignments',\n",
+       "  'goto_definitions',\n",
+       "  'path',\n",
+       "  'usages'])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +223,7 @@
     "    f'''\n",
     "\n",
     "script = jedi.Script(code)#source, 3, len('datetime.da'), 'example.py')\n",
-    "script.completions()\n"
+    "script.completions(), dir(script)\n"
    ]
   },
   {
@@ -295,6 +338,7 @@
     "    samples_dict = load_preprocessed(samples_dict_path)\n",
     "\n",
     "    for i, filename in enumerate(tqdm_notebook(filenames)):\n",
+    "        \n",
     "        if filename in samples_dict:\n",
     "            continue\n",
     "\n",
@@ -338,6 +382,67 @@
     "samples = prepare_samples(path, samples_path)\n",
     "        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('./ranking_samples_tra', 'rb') as f:\n",
+    "    samples = pickle.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18534\n",
+      "32\n"
+     ]
+    }
+   ],
+   "source": [
+    "count = 0\n",
+    "\n",
+    "for v in samples.values():\n",
+    "    count += len(v)\n",
+    "print(count)\n",
+    "print(len(samples.values()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -448,6 +553,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
