--- a/ngrams_baseline.ipynb
+++ b/ngrams_baseline.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,12 +22,14 @@
     "import numpy as np\n",
     "from IPython.display import clear_output\n",
     "\n",
-    "from collections import defaultdict"
+    "from collections import defaultdict\n",
+    "\n",
+    "import keyword"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +51,7 @@
        "(695687, 100)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +178,7 @@
        " ((79580, 9), 13)]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +216,7 @@
     "        for i in range(len(seq)-N):\n",
     "            # to avoid considering empty tokens\n",
     "            # and non-identifiers\n",
-    "            if seq[i+1] != 0 and seq[i+2] != 0 and id_to_word[seq[i+2]].isidentifier():\n",
+    "            if seq[i+1] != 0 and seq[i+2] != 0 and keyword.iskeyword(id_to_word[seq[i+2]]):\n",
     "                if (seq[i], seq[i+1]) in ngrams_dict \\\n",
     "                        and seq[i+2] == ngrams_dict[(seq[i], seq[i+1])]:\n",
     "                    tp += 1\n",
@@ -225,21 +227,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 95687/95687 [00:12<00:00, 7505.28it/s]"
+      "100%|██████████| 95687/95687 [00:09<00:00, 9885.78it/s] "
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.1552\n",
+      "Accuracy: 0.3511\n",
       "Time needed for one prediction is just accessing the dict element, so it's around ~12 sec / ~96000 = 0.0001250 (info from tqdm counter)\n"
      ]
     },
