Add lstm_baseline with accuracy for keywords only

--- a/lstm_baseline.ipynb
+++ b/lstm_baseline.ipynb
@@ -58,7 +58,9 @@
         "from tqdm import tqdm_notebook, trange\n",
         "import pickle\n",
         "import numpy as np\n",
-        "from IPython.display import clear_output"
+        "from IPython.display import clear_output\n",
+        "\n",
+        "import keyword"
       ],
       "execution_count": 0,
       "outputs": []
@@ -81,7 +83,7 @@
       "metadata": {
         "id": "1WoL992vCADZ",
         "colab_type": "code",
-        "outputId": "5d727cad-9ac4-40f8-a287-ca102c30fa4f",
+        "outputId": "56c798aa-99ef-442a-ab79-add81c58166a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -115,7 +117,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "c7f0119d-67f8-4637-b23b-e58af6d84700"
+        "outputId": "b803021c-dddb-4ca4-af08-0376390e50c7"
       },
       "source": [
         "!pip install telepyth -q\n",
@@ -150,7 +152,7 @@
       "metadata": {
         "id": "bnR1yqKZBiqi",
         "colab_type": "code",
-        "outputId": "de46a242-9ca7-4015-cdfa-18e1aa0620b7",
+        "outputId": "0219f2da-63b1-436c-bb24-646b3f78d5dd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 122
@@ -346,6 +348,8 @@
         "    def __init__(self, path, params, start, end):\n",
         "        with open(path, 'rb') as f:\n",
         "            self.data = pickle.load(f)[start:end]\n",
+        "        print(type(self.data))\n",
+        "        print(self.data.shape)\n",
         "\n",
         "    def __len__(self):\n",
         "#         return 10\n",
@@ -362,7 +366,11 @@
       "metadata": {
         "id": "6UpDAPXk3JVg",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "543659f0-bb73-408c-f2cc-2337e482ad56"
       },
       "source": [
         "train_loader = DataLoader(\n",
@@ -372,15 +380,65 @@
         "    num_workers=10\n",
         ")"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<class 'numpy.ndarray'>\n",
+            "(489999, 100)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oSLLX0f5jbtj",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 170
+        },
+        "outputId": "5c952f74-0008-4a2f-eb75-86fcf59f3d25"
+      },
+      "source": [
+        "for x in train_loader:\n",
+        "    print(x)\n",
+        "    print(type(x))\n",
+        "    print(x.shape)\n",
+        "    break"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "tensor([[   13,     8,    14,  ...,   305,     4,    13],\n",
+            "        [    2,     0,     0,  ...,     0,     0,     0],\n",
+            "        [  301,    18,   375,  ...,     7,    31,     5],\n",
+            "        ...,\n",
+            "        [    7,    21,     3,  ...,    13, 27187,    14],\n",
+            "        [   13,  1488,    14,  ...,     0,     0,     0],\n",
+            "        [    5,     9,     2,  ...,     6, 10363,     4]])\n",
+            "<class 'torch.Tensor'>\n",
+            "torch.Size([128, 100])\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "ZKEk7sUHuJ0O",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "ba5ceb8c-7398-490f-e290-b100b9659ecf"
       },
       "source": [
         "test_loader = DataLoader(\n",
@@ -390,8 +448,17 @@
         "    num_workers=10\n",
         ")"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<class 'numpy.ndarray'>\n",
+            "(205688, 100)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -479,10 +546,10 @@
         }
       },
       "source": [
-        "%%time\n",
+        "# %%time\n",
         "\n",
-        "optimizer = torch.optim.Adam(model.parameters(), lr=0.01)\n",
-        "train(model, optimizer, 1)"
+        "# optimizer = torch.optim.Adam(model.parameters(), lr=0.01)\n",
+        "# train(model, optimizer, 1)"
       ],
       "execution_count": 20,
       "outputs": [
@@ -595,15 +662,19 @@
         "#     np.save(\"/home/.../model_checkpoints..._logs.npy\", np.array(train_log))\n",
         "#     np.save(\"/home/.../model_checkpoints..._logs_perp.npy\", np.array(perp_log))\n",
         "\n",
-        "def test(model):\n",
-        "    def filter_identifiers():\n",
-        "        identifiers_ids = set()\n",
-        "        for token_id, word in id_to_word.items():\n",
-        "            if word.isidentifier():\n",
-        "                identifiers_ids.add(token_id)\n",
-        "        return identifiers_ids\n",
+        "def test(model, load_path=''):\n",
+        "    if load_path:\n",
+        "        checkpoint = torch.load(load_path)\n",
+        "        model.load_state_dict(checkpoint['model_state_dict'])\n",
         "\n",
-        "    identifiers_ids = filter_identifiers()\n",
+        "    def filter_keywords():\n",
+        "        keywords_ids = set()\n",
+        "        for token_id, word in id_to_word.items():\n",
+        "            if keyword.iskeyword(word):\n",
+        "                keywords_ids.add(token_id)\n",
+        "        return keywords_ids\n",
+        "\n",
+        "    keywords_ids = filter_keywords()\n",
         "    loss_log = []\n",
         "    model.eval()\n",
         "    total = 0\n",
@@ -617,7 +688,7 @@
         "            _, arg_pred = torch.max(output.squeeze(1), 1)\n",
         "            eq_arr = arg_pred == x[:, i + 1]\n",
         "            for j, elem in enumerate(x[:, i + 1]):\n",
-        "                if int(elem) in identifiers_ids:\n",
+        "                if int(elem) in keywords_ids:\n",
         "                    total += 1\n",
         "                    correct += int(eq_arr[j])\n",
         "#             print(arg_pred)\n",
@@ -635,38 +706,51 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "reW1ketXmhlh",
+        "id": "wbP7gDUxTb87",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85
         },
-        "outputId": "81016347-8a3e-4c06-c222-077c8e0f9108"
+        "outputId": "e3735678-389a-4d71-851a-b5c3493a5b4e"
       },
       "source": [
         "%%time\n",
         "\n",
-        "print('Accuracy:', test(model))"
+        "print('Accuracy:', test(model, base_path + '/model_checkpoints2/lstm_baseline_checkpoint_0.pt'))"
       ],
-      "execution_count": 42,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "100%|██████████| 1607/1607 [22:43<00:00,  1.21it/s]\n"
+            "100%|██████████| 1607/1607 [21:27<00:00,  1.28it/s]\n"
           ],
           "name": "stderr"
         },
         {
           "output_type": "stream",
           "text": [
-            "Accuracy: 0.07568027357303116\n",
-            "CPU times: user 17min 19s, sys: 5min 23s, total: 22min 43s\n",
-            "Wall time: 22min 43s\n"
+            "Accuracy: 0.11462870904348944\n",
+            "CPU times: user 15min 44s, sys: 5min 41s, total: 21min 26s\n",
+            "Wall time: 21min 27s\n"
           ],
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "reW1ketXmhlh",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
