--- a/char_rnn_binary_classification_preprocess.ipynb
+++ b/char_rnn_binary_classification_preprocess.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,11 +150,14 @@
     "        pbar = tqdm(total=self.objects_limit)\n",
     "        objects_from_code = []\n",
     "        while self.total_count < self.objects_limit:\n",
-    "            with open(\n",
-    "                self.path_to_repo + self.filenames[fidx],\n",
-    "                'r'\n",
-    "            ) as code_file:\n",
-    "                code = code_file.read()\n",
+    "            try:\n",
+    "                with open(\n",
+    "                    self.path_to_repo + self.filenames[fidx], 'r'\n",
+    "                ) as code_file:\n",
+    "                    code = code_file.read()\n",
+    "            except IsADirectoryError:\n",
+    "                fidx += 1\n",
+    "                continue\n",
     "            fidx += 1\n",
     "            if self.check_if_english and not self.is_english(code):\n",
     "                continue\n",
@@ -176,21 +179,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "31566657837it [00:25, 1221527424.58it/s]                      "
+      "11942663337it [00:12, 963811656.23it/s]                       "
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of positives samples is 2565009 out of 5000289 (51.30%)\n"
+      "Number of positives samples is 1051233 out of 2000054 (52.56%)\n"
      ]
     },
     {
@@ -204,34 +207,34 @@
    "source": [
     "prep_dataset = PreprocessDataset(\n",
     "    20,\n",
-    "    base_path + '/pycodesuggest_py_repos_normalised/train_files.txt',\n",
+    "    base_path + '/pycodesuggest_py_repos_normalised/test_files.txt',\n",
     "    base_path + '/pycodesuggest_py_repos_normalised/',\n",
-    "    objects_limit=5000000\n",
+    "    objects_limit=2000000\n",
     ")\n",
     "objects_from_code = prep_dataset.make_dataset()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('import json\\nimport o', True),\n",
-       " ('s\\nimport sys\\ntry:\\n  ', False),\n",
-       " ('  import urllib.requ', True),\n",
-       " ('est as urllib2\\nexcep', True),\n",
-       " ('t ImportError:\\n    i', True),\n",
-       " ('mport urllib2\\nvar266', False),\n",
-       " (\"5 = 'https://tldr-bo\", True),\n",
-       " ('t.starbeamrainbowlab', True),\n",
-       " (\"s.com/'\\n\\n\\ndef functi\", True),\n",
-       " ('on2743(arg1358, arg5', False)]"
+       "[('from MyQR.terminal i', True),\n",
+       " ('from MyQR.myqr impor', True),\n",
+       " ('t run\\nimport os\\n\\n\\nde', True),\n",
+       " ('f function1739():\\n  ', False),\n",
+       " ('  import argparse\\n  ', False),\n",
+       " ('  var2519 = argparse', False),\n",
+       " ('.ArgumentParser()\\n  ', False),\n",
+       " ('  var2519.add_argume', True),\n",
+       " (\"nt('Words', help=\\n  \", False),\n",
+       " (\"      'The words to \", True)]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +245,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "98"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(prep_dataset.dataset_dictionary)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +371,7 @@
        " '~'}"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,253 +382,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(base_path + '/objects_from_code.pickle', 'wb') as f:\n",
+    "with open(base_path + '/objects_from_code_test.pickle', 'wb') as f:\n",
     "    pickle.dump(objects_from_code, f)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tokens = prep_dataset.dataset_dictionary\n",
-    "tok2id = dict(zip(tokens, range(len(tokens))))\n",
-    "id2tok = dict(list(map(lambda x: x[::-1], list(tok2id.items()))))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'p': 0,\n",
-       " ' ': 1,\n",
-       " 't': 2,\n",
-       " '=': 3,\n",
-       " '6': 4,\n",
-       " 'X': 5,\n",
-       " 'S': 6,\n",
-       " '+': 7,\n",
-       " 'x': 8,\n",
-       " 's': 9,\n",
-       " 'n': 10,\n",
-       " '8': 11,\n",
-       " '`': 12,\n",
-       " '\\\\': 13,\n",
-       " 'a': 14,\n",
-       " 'I': 15,\n",
-       " 'l': 16,\n",
-       " 'G': 17,\n",
-       " '#': 18,\n",
-       " 'q': 19,\n",
-       " 'M': 20,\n",
-       " '/': 21,\n",
-       " 'D': 22,\n",
-       " 'z': 23,\n",
-       " 'c': 24,\n",
-       " 'R': 25,\n",
-       " 'C': 26,\n",
-       " 'v': 27,\n",
-       " '.': 28,\n",
-       " ',': 29,\n",
-       " 'j': 30,\n",
-       " 'L': 31,\n",
-       " 'N': 32,\n",
-       " ';': 33,\n",
-       " ')': 34,\n",
-       " 'K': 35,\n",
-       " 'T': 36,\n",
-       " '\\x0c': 37,\n",
-       " '?': 38,\n",
-       " 'J': 39,\n",
-       " '9': 40,\n",
-       " 'O': 41,\n",
-       " '\"': 42,\n",
-       " 'A': 43,\n",
-       " '@': 44,\n",
-       " '\\t': 45,\n",
-       " '_': 46,\n",
-       " '}': 47,\n",
-       " 'i': 48,\n",
-       " 'u': 49,\n",
-       " '4': 50,\n",
-       " '*': 51,\n",
-       " 'k': 52,\n",
-       " 'y': 53,\n",
-       " 'F': 54,\n",
-       " 'E': 55,\n",
-       " 'g': 56,\n",
-       " \"'\": 57,\n",
-       " '&': 58,\n",
-       " '-': 59,\n",
-       " 'V': 60,\n",
-       " '3': 61,\n",
-       " 'W': 62,\n",
-       " '2': 63,\n",
-       " 'o': 64,\n",
-       " '\\n': 65,\n",
-       " '7': 66,\n",
-       " '0': 67,\n",
-       " '<': 68,\n",
-       " '5': 69,\n",
-       " 'Y': 70,\n",
-       " 'r': 71,\n",
-       " '[': 72,\n",
-       " '1': 73,\n",
-       " '(': 74,\n",
-       " '|': 75,\n",
-       " 'm': 76,\n",
-       " '>': 77,\n",
-       " '^': 78,\n",
-       " 'h': 79,\n",
-       " 'e': 80,\n",
-       " '$': 81,\n",
-       " 'd': 82,\n",
-       " 'f': 83,\n",
-       " '{': 84,\n",
-       " 'U': 85,\n",
-       " 'Q': 86,\n",
-       " 'w': 87,\n",
-       " 'H': 88,\n",
-       " '~': 89,\n",
-       " 'b': 90,\n",
-       " '%': 91,\n",
-       " '!': 92,\n",
-       " 'P': 93,\n",
-       " 'B': 94,\n",
-       " ']': 95,\n",
-       " ':': 96,\n",
-       " 'Z': 97}"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tok2id"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def convert_for_model(code_samples):\n",
-    "    max_len = len(code_samples[0][0])\n",
-    "    converted_code = np.zeros([len(code_samples), max_len], np.int64)\n",
-    "\n",
-    "    for i in range(len(code_samples)):\n",
-    "        obj = list(map(tok2id.get, code_samples[i][0]))\n",
-    "        converted_code[i, :] = obj\n",
-    "    targets = np.array(list(map(lambda pair: pair[1], code_samples)), np.bool)\n",
-    "\n",
-    "    return converted_code, targets"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[('import json\\nimport o', True), ('s\\nimport sys\\ntry:\\n  ', False), ('  import urllib.requ', True), ('est as urllib2\\nexcep', True), ('t ImportError:\\n    i', True), ('mport urllib2\\nvar266', False), (\"5 = 'https://tldr-bo\", True), ('t.starbeamrainbowlab', True), (\"s.com/'\\n\\n\\ndef functi\", True), ('on2743(arg1358, arg5', False)]\n",
-      "(array([[48, 76,  0, 64, 71,  2,  1, 30,  9, 64, 10, 65, 48, 76,  0, 64,\n",
-      "        71,  2,  1, 64],\n",
-      "       [ 9, 65, 48, 76,  0, 64, 71,  2,  1,  9, 53,  9, 65,  2, 71, 53,\n",
-      "        96, 65,  1,  1],\n",
-      "       [ 1,  1, 48, 76,  0, 64, 71,  2,  1, 49, 71, 16, 16, 48, 90, 28,\n",
-      "        71, 80, 19, 49],\n",
-      "       [80,  9,  2,  1, 14,  9,  1, 49, 71, 16, 16, 48, 90, 63, 65, 80,\n",
-      "         8, 24, 80,  0],\n",
-      "       [ 2,  1, 15, 76,  0, 64, 71,  2, 55, 71, 71, 64, 71, 96, 65,  1,\n",
-      "         1,  1,  1, 48],\n",
-      "       [76,  0, 64, 71,  2,  1, 49, 71, 16, 16, 48, 90, 63, 65, 27, 14,\n",
-      "        71, 63,  4,  4],\n",
-      "       [69,  1,  3,  1, 57, 79,  2,  2,  0,  9, 96, 21, 21,  2, 16, 82,\n",
-      "        71, 59, 90, 64],\n",
-      "       [ 2, 28,  9,  2, 14, 71, 90, 80, 14, 76, 71, 14, 48, 10, 90, 64,\n",
-      "        87, 16, 14, 90],\n",
-      "       [ 9, 28, 24, 64, 76, 21, 57, 65, 65, 65, 82, 80, 83,  1, 83, 49,\n",
-      "        10, 24,  2, 48],\n",
-      "       [64, 10, 63, 66, 50, 61, 74, 14, 71, 56, 73, 61, 69, 11, 29,  1,\n",
-      "        14, 71, 56, 69]]), array([ True, False,  True,  True,  True, False,  True,  True,  True,\n",
-      "       False]))\n"
-     ]
-    }
-   ],
-   "source": [
-    "# %%time\n",
-    "print(objects_from_code[:10])\n",
-    "print(convert_for_model(objects_from_code[:10]))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 19.6 s, sys: 505 ms, total: 20.1 s\n",
-      "Wall time: 20.5 s\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "X_train, y_train = convert_for_model(objects_from_code)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
